prevents the footer from overlapping with the output tag

--- a/xssp_rest/frontend/static/css/site.css
+++ b/xssp_rest/frontend/static/css/site.css
@@ -30,3 +30,22 @@ input[disabled] {
 textarea[readonly] {
   cursor: text !important;
 }
+
+/* Sticky footer styles
+-------------------------------------------------- */
+html {
+  position: relative;
+  min-height: 100%;
+}
+body {
+  /* Margin bottom by footer height */
+  margin-bottom: 60px;
+}
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  /* Set the fixed height of the footer here */
+  height: 60px;
+  background-color: #ffffff;
+}
